<resources>
    <string name="app_name">PokeDex</string>
    <string name="error_occurred">Error occurred. %1$s</string>
    <string name="user_offline">You are offline, please connect to internet.</string>
    <string name="jumpTop">Jump to top</string>
    <string name="filter">Filter</string>
    <string name="by_id_asc">By number ascending</string>
    <string name="by_id_desc">By number descending</string>
    <string name="by_name_asc">By name ascending</string>
    <string name="by_name_desc">By name descending</string>
    <string name="search">Search</string>
    <string name="search_pokemons">Search Pokemons</string>
    <string name="weight">Weight</string>
    <string name="weight_value">%1$s KG</string>
    <string name="height">Height</string>
    <string name="height_value">%1$s M</string>
    <string name="base_stats">Base Stats</string>
    <string name="hp">HP</string>
    <string name="atk">ATK</string>
    <string name="def">DEF</string>
    <string name="spd">SPD</string>
    <string name="exp">EXP</string>
</resources>