<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.details.DetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="32dp"
        android:descendantFocusability="blocksDescendants">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back_ios"
            app:tint="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:translationZ="100dp"
            app:layout_constraintBottom_toBottomOf="@+id/arrow"
            app:layout_constraintStart_toEndOf="@+id/arrow"
            app:layout_constraintTop_toTopOf="@+id/arrow"
            tools:text="skydoves" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/index"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="12dp"
            android:layout_marginStart="12dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:translationZ="100dp"
            app:layout_constraintBottom_toBottomOf="@id/arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/arrow"
            tools:text="#001" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/slides_view_pager"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/arrow">

            <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/background"
                app:tabBackground="@drawable/tab_selector"
                app:tabGravity="center"
                app:tabIndicatorHeight="0dp" />
        </androidx.viewpager.widget.ViewPager>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/typesRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:padding="6dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/slides_view_pager"
            tools:itemCount="2"
            tools:listitem="@layout/item_types" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/weight"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="21sp"
            app:layout_constraintEnd_toStartOf="@id/height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/typesRecyclerView"
            tools:text="24.0 KG" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/height"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/weight"
            app:layout_constraintTop_toTopOf="@id/weight"
            tools:text="11 M" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/weight_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textColor="@color/white_56"
            app:layout_constraintEnd_toStartOf="@id/height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weight"
            tools:text="Weight" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/height_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textColor="@color/white_56"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/weight"
            app:layout_constraintTop_toBottomOf="@id/height" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/stats_title"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/base_stats"
            android:textColor="@color/white_93"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weight_title" />

        <TextView
            android:id="@+id/hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/hp"
            android:textColor="@color/white_70"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stats_title" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_hp"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@id/hp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/hp"
            app:layout_constraintTop_toTopOf="@id/hp" />

        <TextView
            android:id="@+id/attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/atk"
            android:textColor="@color/white_70"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hp" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/attackHp"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@id/attack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/progress_hp"
            app:layout_constraintTop_toTopOf="@id/attack" />

        <TextView
            android:id="@+id/defense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/def"
            android:textColor="@color/white_70"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/attack" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/defenseHp"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@id/defense"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/progress_hp"
            app:layout_constraintTop_toTopOf="@id/defense" />

        <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/spd"
            android:textColor="@color/white_70"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/defense" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/speedHp"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@id/speed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/progress_hp"
            app:layout_constraintTop_toTopOf="@id/speed" />

        <TextView
            android:id="@+id/exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/exp"
            android:textColor="@color/white_70"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/speed" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/expHp"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@id/exp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/progress_hp"
            app:layout_constraintTop_toTopOf="@id/exp" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>